Add example test for FreezingArchRule

--- a/ArchUnit-Demo/src/test/resources/archunit.properties
+++ b/ArchUnit-Demo/src/test/resources/archunit.properties
@@ -1,3 +1,11 @@
+# Since ArchUnit 0.12, all properties in this file can be overridden
+# by passing a corresponding system property with "archunit." prefix.
+
+
+#freeze.store.default.allowStoreCreation=true
+#freeze.store.default.allowStoreUpdate=true
+#freeze.store.default.path=archunit_store
+
 
 #resolveMissingDependenciesFromClassPath=true
 
