Add configuration properties for cycle detection

--- a/ArchUnit-Demo/src/test/resources/archunit.properties
+++ b/ArchUnit-Demo/src/test/resources/archunit.properties
@@ -7,6 +7,10 @@
 #freeze.store.default.path=archunit_store
 
 
+#cycles.maxNumberToDetect=100
+#cycles.maxNumberOfDependenciesPerEdge=5
+
+
 #resolveMissingDependenciesFromClassPath=true
 
 #classResolver=com.tngtech.archunit.core.importer.resolvers.SelectedClassResolverFromClasspath
