Add build encoding

--- a/ArchUnit-Demo/pom.xml
+++ b/ArchUnit-Demo/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>archunit-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
