Add property for refreezing violations

--- a/ArchUnit-Demo/src/test/resources/archunit.properties
+++ b/ArchUnit-Demo/src/test/resources/archunit.properties
@@ -5,6 +5,7 @@
 #freeze.store.default.allowStoreCreation=true
 #freeze.store.default.allowStoreUpdate=true
 #freeze.store.default.path=archunit_store
+#freeze.refreeze=true
 
 
 #cycles.maxNumberToDetect=100
