Add example config for executing selected @ArchTest methods and fields only

--- a/ArchUnit-Demo/src/test/resources/archunit.properties
+++ b/ArchUnit-Demo/src/test/resources/archunit.properties
@@ -23,3 +23,6 @@
 #archRule.failOnEmptyShould=true
 
 junit.displayName.replaceUnderscoresBySpaces=true
+
+# Run only the @ArchTest methods and fields with an exactly matching name (plus all @Test methods)
+#junit.testFilter=impl_in_backend_only,IMPL_IN_BACKEND_ONLY
